# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PathTracer/: main.cpp
PathTracer.xcodeproj/: project.pbxproj
PathTracer.xcodeproj/xcshareddata/xcschemes/: PathTracer.xcscheme
PathTracer/Resources/: PathTracer-Info.plist
PathTracer/Source/: App.cpp
PathTracer/Source/Renderer/: Renderer.cpp  Renderer.hpp
PathTracer/Source/Renderer/Chunk/: Worker.cpp  Worker.hpp
PathTracer/Source/Renderer/Scene/: Scene.cpp  Scene.hpp
PathTracer/Source/Window/: Window.cpp  Window.hpp
Project/: README.md
Project/Raytracer/: Raytracer-Info.plist  main.cpp  main.h
Project/Raytracer Profiler.trace/: form.template  open.creq
Project/Raytracer Profiler.trace/Trace1.run/: RunIssues.storedata
Project/Raytracer Profiler.trace/Trace16.run/: RunIssues.storedata
Project/Raytracer Profiler.trace/Trace7.run/: RunIssues.storedata
Project/Raytracer Profiler.trace/corespace/: MANIFEST.plist
Project/Raytracer Profiler.trace/symbols/stores/: 021B41C2-A5E8-37C2-9A8D-899519F02AE6.symbols  105DD5BC-5020-34D9-AE16-7B0702808D52.symbols  138DA939-08B3-3DB4-90D0-A5FF35E06BA6.symbols  1887CA49-02D5-3775-BD8F-07E18B382A9C.symbols  1DD3A1C9-D765-34FB-B8C1-87BF52CE49C0.symbols  21120432-52C1-34E4-BF01-623722FA3A41.symbols  217B3A48-6251-3934-9C7F-71AEAAEFE46B.symbols  2634EDC4-EB98-3261-A92A-762B73833452.symbols  2995471C-4A7A-342A-B702-496519D138E2.symbols  3172E66B-6B24-3178-8E0C-90D49EBD5C24.symbols  35D7762A-4F30-3C06-9561-03129131C328.symbols  383BFD71-E7FA-3EA0-B8BC-8BC2452DD881.symbols  3EC22291-65E5-3EB6-9498-9A1244C90147.symbols  4404D4B7-FE46-33B6-919F-8A11C242CE96.symbols  4A466196-D2DD-367B-80AB-988F281EC3B8.symbols  4AB185B3-DC20-3C03-A193-67C0E6C589D7.symbols  516911DA-18D7-3D17-8646-BBF7C75CD070.symbols  52D8D7A1-4879-3488-9D39-5F2C7696EFA8.symbols  55FCA547-4877-3075-8A08-FE1620BFC682.symbols  5C22EDE2-D4DB-35F5-85AA-36E274616117.symbols  5C4DF32B-D54A-3F74-BBA8-7CBA0D975A4E.symbols  61A850FD-1E85-3439-AE83-6BC7B4AEC882.symbols  64E3394D-C908-378C-B5CE-B89C6BE61E9F.symbols  66942A5C-57B3-3524-BA49-0F2DA4A584D1.symbols  69773C1A-17CF-3400-AC76-C1033939733F.symbols  77DE8770-609A-3213-AB0D-FDAE0BC1313E.symbols  7D13C9B5-D195-3E9E-B6C7-254F95A925C6.symbols  8633A39C-10A2-3B44-93F7-617AB09FF640.symbols  8E907E6C-C227-312E-944C-767093692AFF.symbols  8F7A0D5B-0E89-36F6-AC84-D3BEC2C44792.symbols  8FADC1D2-0B61-34C7-9F1C-19D85CB07E16.symbols  9005FC69-0FEF-375F-AB09-DF5CEBAD5D14.symbols  923BFDCE-0955-3645-8843-C1504513B364.symbols  9B6D4883-03E9-3785-851E-EA79FA64ADC1.symbols  9D02C1BF-DD34-3AAB-B729-39261674A8AC.symbols  A263088E-E069-3CAF-A98B-1A2BF034AD2E.symbols  (+27 more)
Project/Raytracer.xcodeproj/: project.pbxproj
Project/Raytracer/Source/: App.cpp  App.hpp
Raytracer/: main.cpp
Raytracer.xcodeproj/: project.pbxproj
Raytracer.xcodeproj/xcshareddata/xcschemes/: Raytracer.xcscheme
Raytracer/Source/: App.hpp
Raytracer/Source/Renderer/: Renderer.cpp  Renderer.hpp
Raytracer/Source/Window/: Window.cpp  Window.hpp
apps/: App.cpp  App.hpp  CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
include/PathTracer/Renderer/: Renderer.hpp  Worker.hpp
lab1/: README.md
lab2/: Gracjan J - Task1.cpp  Gracjan J - Task2.cpp  README.md
lab3/: README.md  Tasks.cpp
lab4/: Gracjan Jeżewski - Task.cpp  README.md
lab5/: Gracjan Jeżewski - Task.cpp  README.md
lab6/: Gracjan Jeżewski - Task 6.cpp
lab7/: Gracjan Jeżewski - Task 7.cpp  README.md  dummy1.txt  dummy2.txt  dummy3.txt
lab8/: Gracjan Jeżewski - Task 8.cpp
src/: CMakeLists.txt
src/Renderer/: Renderer.cpp  Worker.cpp
src/Renderer/Scene/: Camera.cpp  Material.cpp  Scene.cpp
src/Renderer/Scene/Geometry/: Cube.cpp  Disc.cpp  Plane.cpp  Rectangle.cpp  Solid.cpp  Sphere.cpp
src/Renderer/Utilities/: Colour.cpp  Ray.cpp  Vectors.cpp
(+312 files in other folders)
